package handler

import (
	"log/slog"
	orderpb "logistics/api/protobuf/order_service"

	"github.com/gin-gonic/gin"
)

type OrderHandler struct {
	logger          *slog.Logger
	orderGRPCClient orderpb.OrderServiceClient
}

func NewOrderHandler(logger *slog.Logger, orderClient orderpb.OrderServiceClient) *OrderHandler {
	return &OrderHandler{
		logger:          logger,
		orderGRPCClient: orderClient,
	}
}

func (o *OrderHandler) CreateOrder(c *gin.Context) {
	// Implementation for creating an order
}
func (o *OrderHandler) GetOrders(c *gin.Context) {
	// Implementation for getting orders
}
func (o *OrderHandler) GetOrderByID(c *gin.Context) {
	// Implementation for getting an order by ID
}
func (o *OrderHandler) AssignDriver(c *gin.Context) {
	// Implementation for assigning a driver to an order
}
